--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I Love Fern</title>
 </head>
 <body>
-    <h1>I Love You</h1>
+    <h1>รักเฟิร์นที่สุดในโลกเลยค้าบบ💕</h1>
 </body>
 </html>
